regression_tests/snap/check/testsl11.err
================================================================================

                          PROGRAM SNAP  Version 2.7.10

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Jun 18 2018 09:20:21

================================================================================
                     Run at 18-JUN-2018 09:34:47 by ccrook




================================================================================
                                                            18-JUN-2018 09:34:47

                                 ERROR SUMMARY

================================================================================

Error: Invalid "inside" option in station list requires coord sys code and wkt file name
       Line 17: File testsl11.snp

Error: The command file is not correct
