regression_tests/snap/check/testsl11.lst
================================================================================

                          PROGRAM SNAP  Version 2.7.10

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Jun 18 2018 09:20:21

================================================================================
                     Run at 18-JUN-2018 09:34:47 by ccrook



Program options read from testsl11.snp

Job: Regression tests - station lists


Solution type: 3d coordinate adjustment


Coordinates file testsl.crd
      20 stations read

Data file 1: testsl.dat
    Observations between 2000-05-01 00:00:00 and 2000-05-01 00:00:00
      19 height differences
      20 latitudes
      20 longitudes



================================================================================
Regression tests - station lists                            18-JUN-2018 09:34:47

                                     ERRORS

================================================================================

Note: 2 errors reported in testsl11.err
